2006-11-21  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp ("loadrc"): use the screen supplied to the function
	("escape"): ignore screen

	* input.lisp (input-handle-selection-event): ignore selection
	(draw-input-bucket): use translate-id

	* mode-line.lisp (redraw-mode-line-for): use translate-id

	* core.lisp (translate-id): new function
	(max-width): use translate-id
	(echo-string-list): likewise

2006-11-20  Shawn Betts  <sabetts@vcn.bc.ca>

	* core.lisp (get-x-selection): new function

2006-11-19  Shawn Betts  <sabetts@vcn.bc.ca>

	* primitives.lisp (*x-selection*): new global variable

	* input.lisp (input-handle-key-press-event): new function
	(input-handle-selection-event): likewise
	(read-key-handle-event): call input-handle-key-press-event
	(read-key-or-selection-handle-event): new function
	(read-key-or-selection): likewise
	(read-one-line): call read-key-or-selection. handle selection
	strings.
	(input-kill-line): call set-x-selection
	(input-kill-to-beginning): likewise
	(input-insert-string): new function
	(input-insert-char): likewise
	(input-self-insert): call input-insert-char
	(input-yank-selection): new function

	* core.lisp (:selection-request): new event handler
	(:selection-clear): likewise
	(export-selection): new function
	(set-x-selection): likewise
	(send-selection): likewise

	* user.lisp ("escape"): new command

2006-11-13  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp ("ratwarp"): new command
	("ratrelwarp"): likewise
	("loadrc"): new command

	* core.lisp (warp-pointer-relative): new function

2006-11-10  Shawn Betts  <sabetts@vcn.bc.ca>

	* stumpwm.lisp (stumpwm): work around sbcl's putenv bug

2006-11-09  Shawn Betts  <sabetts@vcn.bc.ca>

	* core.lisp (:mapping-notify): update clx's key mappings

2006-11-05  Shawn Betts  <sabetts@vcn.bc.ca>

	* core.lisp (maximize-window): set the window's position to 0,0

	* mode-line.lisp (mode-line-format-elt): ignore errors when calling eval.

2006-10-23  Shawn Betts  <sabetts@vcn.bc.ca>
